# ai-document-search-backend

./: .coveragerc  .gitignore  Dockerfile  README.md  black.py.toml  config.yml  docker-compose-weaviate.yml  docker-compose.yml  locustfile.py  logging.conf  pyproject.toml
.github/workflows/: lint_and_test.yml  load_test.yml  master_ai-document-search-backend.yml
ai_document_search_backend/: application.py  auth.py  config.py  container.py  containers.py  endpoints.py  services.py  utils.py
ai_document_search_backend/chains/: custom_conversational_retrieval_chain.py  source_metadata_chain.py
ai_document_search_backend/database_providers/: conversation_database.py  cosmos_conversation_database.py  cosmos_database.py  in_memory_conversation_database.py
ai_document_search_backend/experiments/: 01_chat_retrieval.py  01_chat_retrieval_with_sources.py  chat_retrieval_with_sources.py
ai_document_search_backend/routers/: auth_router.py  chatbot_router.py  conversation_router.py  home_router.py  summarization_router.py  users_router.py
ai_document_search_backend/scripts/: download_documents.py  fill_vectorstore.py  observability.py  prepare_data.py
ai_document_search_backend/services/: auth_service.py  chat_history_service.py  chatbot_service.py  conversation_service.py  in_memory_chat_history_service.py  summarization_service.py
ai_document_search_backend/utils/: conversation_to_chat_history.py  download_documents.py  fill_vectorstore.py  filters.py  get_chat_history.py  prepare_data.py
docs/: PROJECT_STRUCTURE.md
docs/diagrams/: chatbot_architecture.excalidraw  conversations_saving.excalidraw  deployment_diagram.excalidraw
tests/: test_auth_endpoint.py  test_chatbot_endpoint.py  test_conversation_endpoint.py  test_health_endpoint.py  test_summarization_endpoint.py  test_token_endpoint.py  test_users_endpoint.py
tests/database_providers/: test_cosmos_conversation_database.py  test_in_memory_conversation_database.py
tests/endpoints/: test_auth_endpoint.py  test_chatbot_endpoint.py  test_conversation_endpoint.py  test_health_endpoint.py  test_summarization_endpoint.py  test_users_endpoint.py
tests/routers/: test_auth_router.py  test_chatbot_router.py  test_conversation_router.py
tests/utils/: test_conversation_to_chat_history.py  test_filters.py  test_get_chat_history.py
