[tool.poetry]
name = "ai-document-search-backend"
version = "0.1.0"
description = ""
authors = ["Petr Janik <petrj@stud.ntnu.no>"]
readme = "README.md"
packages = [{include = "ai_document_search_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
dependency-injector = "^4.41.0"
pandas = "^2.1.0"
requests = "^2.31.0"
openpyxl = "^3.1.2"
langchain = "^0.0.294"
pypdf = "^3.16.1"
openai = "^0.28.0"
tiktoken = "^0.5.1"
weaviate-client = "^3.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
black = "^23.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
