[tool.poetry]
name = "ai-document-search-backend"
version = "0.1.0"
description = ""
authors = ["Petr Janik <peta.janik@email.cz>"]
readme = "README.md"
packages = [{include = "ai_document_search_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
dependency-injector = "^4.41.0"
pandas = "^2.1.0"
requests = "^2.31.0"
openpyxl = "^3.1.2"
python-multipart = "^0.0.6"
cryptography = "^41.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
langchain = "^0.0.294"
pypdf = "^3.16.1"
openai = "^0.28.0"
tiktoken = "^0.5.1"
weaviate-client = "^3.24.1"
unstructured = {extras = ["pdf"], version = "^0.10.15"}
pymupdf = "^1.23.3"
chromadb = "^0.4.13"
azure-cosmos = "^4.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
black = "^23.9.0"
ruff = "^0.0.290"
anys = "^0.3.0"
locust = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Check also naming conventions (https://docs.astral.sh/ruff/rules/#pep8-naming-n)
extend-select = ["N"]
